upgrade to django 2.2 lts

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-certifi==2018.1.18
-chardet==3.0.4
-Django==1.11.23
-idna==2.6
-lti==0.9.2
-lxml==4.1.1
-oauthlib==2.0.6
-pytz==2017.3
-requests>=2.0.0
-requests-oauthlib==0.8.0
+certifi
+chardet
+Django>=2.2.0,<2.3
+idna
+lti
+lxml
+oauthlib
+pytz
+requests
+requests-oauthlib
 urllib3
